--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
     </div>
     <div class="body_container">
 
-        <header >
+        <header>
             <div class="header_wrapper mobile_opened  element-animation">
                 <nav>
                     <div class="logo_wrapper">
@@ -86,8 +86,10 @@
                 <div class="header_info_wrapper ">
                     <div class="header_info_col header_info_col1">
                         <h1 class=" element-animation"><span>Who is</span> mr. Spidershiba Inu?</h1>
-                        <div class="header_info_col_subtitle  element-animation">it’s a hybrid of Shiba and Spiderman.... but </div>
-                        <div class="header_info_col_text  element-animation">It’s not only for pump and dump by Elon tweets.
+                        <div class="header_info_col_subtitle  element-animation">it’s a hybrid of Shiba and
+                            Spiderman.... but </div>
+                        <div class="header_info_col_text  element-animation">It’s not only for pump and dump by Elon
+                            tweets.
                             This is real NFT game with Achiements, Goals and nice gameplay with tokenization</div>
                         <div class="desktop_btns">
                             <div class="header_info_col_buttons">
@@ -202,15 +204,16 @@
                 </div>
 
                 <div class="how_it_works_info">
-                    <h3 class="  element-animation">Yes you read that right, SpiderShib Inu officially enters the game to conquer the world 🌎</h3>
+                    <h3 class="  element-animation">Yes you read that right, SpiderShib Inu officially enters the game
+                        to conquer the world 🌎</h3>
                     <img class="cat_img_earth   element-animation" src="img/2_section/cat.png" alt="">
                     <div class="header_info_col_buttons   element-animation">
                         <button class="reb_btn">Let’s find out more</button>
                     </div>
                 </div>
-                <img class="img_absolute img_red  element-animation" src="img/2_section/red.png" alt="">
-                <img class="img_absolute img_blue  element-animation" src="img/2_section/blue.png" alt="">
-                <img class="img_absolute img_gold  element-animation" src="img/2_section/gold.png" alt="">
+                <img class="img_absolute img_red" src="img/2_section/red.png" alt="">
+                <img class="img_absolute img_blue" src="img/2_section/blue.png" alt="">
+                <img class="img_absolute img_gold" src="img/2_section/gold.png" alt="">
                 <!-- <div class="section_title">How it works?</div> -->
 
             </div>
@@ -346,6 +349,184 @@
                                 a coin, but by creating a real NFT game p2e</div>
                         </div>
                     </div>
+                </div>
+            </div>
+        </section>
+
+        <section class="road_line mobile_opened" id="roadmap">
+            <div class="section_title">Roadmap</div>
+
+            <div class="road_line_wrapper">
+                <div class="road_line_col road_line_col1">
+                    <div class="road_line_col_item">
+                        <div class="road_line_col_item_number">
+                            <div class="road_line_col_item_number_number">1</div>
+                        </div>
+                        <div class="road_line_col_item_info">
+                            <div class="road_line_col_item_info_title">August 2021</div>
+                            <ul class="road_line_col_item_info_list">
+                                <li>• Started project</li>
+                                <li>• Budget accumulation</li>
+                                <li>• Winning team search</li>
+                            </ul>
+                        </div>
+                    </div>
+
+                    <div class="road_line_col_item">
+                        <div class="road_line_col_item_number">
+                            <div class="road_line_col_item_number_number">3</div>
+                        </div>
+                        <div class="road_line_col_item_info">
+                            <div class="road_line_col_item_info_title">Dec - Jan 2022</div>
+                            <ul class="road_line_col_item_info_list">
+                                <li>• Official launch on pinksale</li>
+                                <li>• Start marketing campaign</li>
+                                <li>• Airdrop</li>
+                                <li>• Panckacke swap launch</li>
+                                <li>• Start of collaborations with decentraland and the sandbox</li>
+                            </ul>
+                        </div>
+                    </div>
+
+                    <div class="road_line_col_item">
+                        <div class="road_line_col_item_number">
+                            <div class="road_line_col_item_number_number">5</div>
+                        </div>
+                        <div class="road_line_col_item_info">
+                            <div class="road_line_col_item_info_title">Q2 2022</div>
+                            <ul class="road_line_col_item_info_list">
+                                <li>• Launch of new website</li>
+                                <li>• Centralized exchange listening</li>
+                                <li>• Launch of Spidershiba inu single player</li>
+                                <li>• Creation of NFT marketplace</li>
+                                <li>• First teaser of Spidershiba inu World Metaverse multiplayer</li>
+                                <li>• Android & iOS App release</li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
+                <img class="line_img" height="100%" src="img/Road_line/line.png" alt="">
+                <div class="road_line_col road_line_col2">
+                    <div class="road_line_col_item">
+                        <div class="road_line_col_item_number">
+                            <div class="road_line_col_item_number_number">2</div>
+                        </div>
+                        <div class="road_line_col_item_info">
+                            <div class="road_line_col_item_info_title">Sept - Nov 2021</div>
+                            <ul class="road_line_col_item_info_list">
+                                <li>• Whitepaper creation</li>
+                                <li>• Smartcontract testing</li>
+                                <li>• Building ideas for nft game</li>
+                                <li>• start developing website and game</li>
+                                <li>• start creating NFT</li>
+                                <li>• start creating tokenomics</li>
+                            </ul>
+                        </div>
+                    </div>
+
+                    <div class="road_line_col_item">
+                        <div class="road_line_col_item_number">
+                            <div class="road_line_col_item_number_number">4</div>
+                        </div>
+                        <div class="road_line_col_item_info">
+                            <div class="road_line_col_item_info_title">Q1 2022</div>
+                            <ul class="road_line_col_item_info_list">
+                                <li>• Listing on coinmarketcap and coingecko</li>
+                                <li>• Early beta game</li>
+                                <li>• Promotion cooperation with big celebrities</li>
+                                <li>• NFT & Game community build-up</li>
+                                <li>• NFT collaborations and launch</li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+            <div class="road_line_wrapper_mobile">
+                <div class="road_line_wrapper_mobile_items">
+                    <img class="mobile_line" class="line_img" height="100%" src="img/Road_line/line.png" alt="">
+
+                    <div class="road_line_col_item">
+                        <div class="road_line_col_item_number">
+                            <div class="road_line_col_item_number_number">1</div>
+                        </div>
+                        <div class="road_line_col_item_info">
+                            <div class="road_line_col_item_info_title">August 2021</div>
+                            <ul class="road_line_col_item_info_list">
+                                <li>• Started project</li>
+                                <li>• Budget accumulation</li>
+                                <li>• Winning team search</li>
+                            </ul>
+                        </div>
+                    </div>
+
+                    <div class="road_line_col_item">
+                        <div class="road_line_col_item_number">
+                            <div class="road_line_col_item_number_number">2</div>
+                        </div>
+                        <div class="road_line_col_item_info">
+                            <div class="road_line_col_item_info_title">Sept - Nov 2021</div>
+                            <ul class="road_line_col_item_info_list">
+                                <li>• Whitepaper creation</li>
+                                <li>• Smartcontract testing</li>
+                                <li>• Building ideas for nft game</li>
+                                <li>• start developing website and game</li>
+                                <li>• start creating NFT</li>
+                                <li>• start creating tokenomics</li>
+                            </ul>
+                        </div>
+                    </div>
+
+                    <div class="road_line_col_item">
+                        <div class="road_line_col_item_number">
+                            <div class="road_line_col_item_number_number">3</div>
+                        </div>
+                        <div class="road_line_col_item_info">
+                            <div class="road_line_col_item_info_title">Dec - Jan 2022</div>
+                            <ul class="road_line_col_item_info_list">
+                                <li>• Official launch on pinksale</li>
+                                <li>• Start marketing campaign</li>
+                                <li>• Airdrop</li>
+                                <li>• Panckacke swap launch</li>
+                                <li>• Start of collaborations with decentraland and the sandbox</li>
+                            </ul>
+                        </div>
+                    </div>
+
+                    <div class="road_line_col_item">
+                        <div class="road_line_col_item_number">
+                            <div class="road_line_col_item_number_number">4</div>
+                        </div>
+                        <div class="road_line_col_item_info">
+                            <div class="road_line_col_item_info_title">Q1 2022</div>
+                            <ul class="road_line_col_item_info_list">
+                                <li>• Listing on coinmarketcap and coingecko</li>
+                                <li>• Early beta game</li>
+                                <li>• Promotion cooperation with big celebrities</li>
+                                <li>• NFT & Game community build-up</li>
+                                <li>• NFT collaborations and launch</li>
+                            </ul>
+                        </div>
+                    </div>
+
+                    <div class="road_line_col_item">
+                        <div class="road_line_col_item_number">
+                            <div class="road_line_col_item_number_number">5</div>
+                        </div>
+                        <div class="road_line_col_item_info">
+                            <div class="road_line_col_item_info_title">Q2 2022</div>
+                            <ul class="road_line_col_item_info_list">
+                                <li>• Launch of new website</li>
+                                <li>• Centralized exchange listening</li>
+                                <li>• Launch of Spidershiba inu single player</li>
+                                <li>• Creation of NFT marketplace</li>
+                                <li>• First teaser of Spidershiba inu World Metaverse multiplayer</li>
+                                <li>• Android & iOS App release</li>
+                            </ul>
+                        </div>
+                    </div>
+                    <img class="graphic_img" src="img/Road_line/mobile_graphic.png" alt="">
+
                 </div>
             </div>
         </section>
