--- a/index.html
+++ b/index.html
@@ -358,85 +358,97 @@
 
             <div class="road_line_wrapper">
                 <div class="road_line_col road_line_col1">
-                    <div class="road_line_col_item">
-                        <div class="road_line_col_item_number">
-                            <div class="road_line_col_item_number_number">1</div>
-                        </div>
-                        <div class="road_line_col_item_info">
-                            <div class="road_line_col_item_info_title">August 2021</div>
-                            <ul class="road_line_col_item_info_list">
-                                <li>• Started project</li>
-                                <li>• Budget accumulation</li>
-                                <li>• Winning team search</li>
-                            </ul>
+
+                    <div class="road_line_item_container element-animation">
+                        <div class="road_line_col_item">
+                            <div class="road_line_col_item_number">
+                                <div class="road_line_col_item_number_number">1</div>
+                            </div>
+                            <div class="road_line_col_item_info">
+                                <div class="road_line_col_item_info_title">August 2021</div>
+                                <ul class="road_line_col_item_info_list">
+                                    <li>• Started project</li>
+                                    <li>• Budget accumulation</li>
+                                    <li>• Winning team search</li>
+                                </ul>
+                            </div>
                         </div>
                     </div>
 
-                    <div class="road_line_col_item">
-                        <div class="road_line_col_item_number">
-                            <div class="road_line_col_item_number_number">3</div>
-                        </div>
-                        <div class="road_line_col_item_info">
-                            <div class="road_line_col_item_info_title">Dec - Jan 2022</div>
-                            <ul class="road_line_col_item_info_list">
-                                <li>• Official launch on pinksale</li>
-                                <li>• Start marketing campaign</li>
-                                <li>• Airdrop</li>
-                                <li>• Panckacke swap launch</li>
-                                <li>• Start of collaborations with decentraland and the sandbox</li>
-                            </ul>
+                    <div class="road_line_item_container element-animation">
+                        <div class="road_line_col_item">
+                            <div class="road_line_col_item_number">
+                                <div class="road_line_col_item_number_number">3</div>
+                            </div>
+                            <div class="road_line_col_item_info">
+                                <div class="road_line_col_item_info_title">Dec - Jan 2022</div>
+                                <ul class="road_line_col_item_info_list">
+                                    <li>• Official launch on pinksale</li>
+                                    <li>• Start marketing campaign</li>
+                                    <li>• Airdrop</li>
+                                    <li>• Panckacke swap launch</li>
+                                    <li>• Start of collaborations with decentraland and the sandbox</li>
+                                </ul>
+                            </div>
                         </div>
                     </div>
 
-                    <div class="road_line_col_item">
-                        <div class="road_line_col_item_number">
-                            <div class="road_line_col_item_number_number">5</div>
-                        </div>
-                        <div class="road_line_col_item_info">
-                            <div class="road_line_col_item_info_title">Q2 2022</div>
-                            <ul class="road_line_col_item_info_list">
-                                <li>• Launch of new website</li>
-                                <li>• Centralized exchange listening</li>
-                                <li>• Launch of Spidershiba inu single player</li>
-                                <li>• Creation of NFT marketplace</li>
-                                <li>• First teaser of Spidershiba inu World Metaverse multiplayer</li>
-                                <li>• Android & iOS App release</li>
-                            </ul>
+                    <div class="road_line_item_container element-animation">
+                        <div class="road_line_col_item">
+                            <div class="road_line_col_item_number">
+                                <div class="road_line_col_item_number_number">5</div>
+                            </div>
+                            <div class="road_line_col_item_info">
+                                <div class="road_line_col_item_info_title">Q2 2022</div>
+                                <ul class="road_line_col_item_info_list">
+                                    <li>• Launch of new website</li>
+                                    <li>• Centralized exchange listening</li>
+                                    <li>• Launch of Spidershiba inu single player</li>
+                                    <li>• Creation of NFT marketplace</li>
+                                    <li>• First teaser of Spidershiba inu World Metaverse multiplayer</li>
+                                    <li>• Android & iOS App release</li>
+                                </ul>
+                            </div>
                         </div>
                     </div>
+
                 </div>
+
                 <img class="line_img" height="100%" src="img/Road_line/line.png" alt="">
                 <div class="road_line_col road_line_col2">
-                    <div class="road_line_col_item">
-                        <div class="road_line_col_item_number">
-                            <div class="road_line_col_item_number_number">2</div>
-                        </div>
-                        <div class="road_line_col_item_info">
-                            <div class="road_line_col_item_info_title">Sept - Nov 2021</div>
-                            <ul class="road_line_col_item_info_list">
-                                <li>• Whitepaper creation</li>
-                                <li>• Smartcontract testing</li>
-                                <li>• Building ideas for nft game</li>
-                                <li>• start developing website and game</li>
-                                <li>• start creating NFT</li>
-                                <li>• start creating tokenomics</li>
-                            </ul>
+                    <div class="road_line_item_container element-animation">
+                        <div class="road_line_col_item">
+                            <div class="road_line_col_item_number">
+                                <div class="road_line_col_item_number_number">2</div>
+                            </div>
+                            <div class="road_line_col_item_info">
+                                <div class="road_line_col_item_info_title">Sept - Nov 2021</div>
+                                <ul class="road_line_col_item_info_list">
+                                    <li>• Whitepaper creation</li>
+                                    <li>• Smartcontract testing</li>
+                                    <li>• Building ideas for nft game</li>
+                                    <li>• start developing website and game</li>
+                                    <li>• start creating NFT</li>
+                                    <li>• start creating tokenomics</li>
+                                </ul>
+                            </div>
                         </div>
                     </div>
-
-                    <div class="road_line_col_item">
-                        <div class="road_line_col_item_number">
-                            <div class="road_line_col_item_number_number">4</div>
-                        </div>
-                        <div class="road_line_col_item_info">
-                            <div class="road_line_col_item_info_title">Q1 2022</div>
-                            <ul class="road_line_col_item_info_list">
-                                <li>• Listing on coinmarketcap and coingecko</li>
-                                <li>• Early beta game</li>
-                                <li>• Promotion cooperation with big celebrities</li>
-                                <li>• NFT & Game community build-up</li>
-                                <li>• NFT collaborations and launch</li>
-                            </ul>
+                    <div class="road_line_item_container element-animation">
+                        <div class="road_line_col_item">
+                            <div class="road_line_col_item_number">
+                                <div class="road_line_col_item_number_number">4</div>
+                            </div>
+                            <div class="road_line_col_item_info">
+                                <div class="road_line_col_item_info_title">Q1 2022</div>
+                                <ul class="road_line_col_item_info_list">
+                                    <li>• Listing on coinmarketcap and coingecko</li>
+                                    <li>• Early beta game</li>
+                                    <li>• Promotion cooperation with big celebrities</li>
+                                    <li>• NFT & Game community build-up</li>
+                                    <li>• NFT collaborations and launch</li>
+                                </ul>
+                            </div>
                         </div>
                     </div>
                 </div>
@@ -527,6 +539,45 @@
                     </div>
                     <img class="graphic_img" src="img/Road_line/mobile_graphic.png" alt="">
 
+                </div>
+            </div>
+        </section>
+
+        <section class="team mobile_opened" id="team">
+            <div class="section_title">Team</div>
+
+            <div class="team_wrapper">
+                <div class="slider_wrapper">
+                    <div class="team_item">
+                        <img src="img/Team/3.png" alt="">
+                        <div class="team_item_title">Jonh Smith</div>
+                        <div class="team_item_text">Founder and CEO</div>
+                    </div>
+                    <div class="team_item">
+                        <img src="img/Team/1.png" alt="">
+                        <div class="team_item_title">Binh Mai</div>
+                        <div class="team_item_text">Blockchain expert</div>
+                    </div>
+                    <div class="team_item">
+                        <img src="img/Team/2.png" alt="">
+                        <div class="team_item_title">Bui Cai</div>
+                        <div class="team_item_text">Co-founder and CTO</div>
+                    </div>
+                    <div class="team_item">
+                        <img src="img/Team/4.png" alt="">
+                        <div class="team_item_title">Adam Jones</div>
+                        <div class="team_item_text">Marketing and funnels</div>
+                    </div>
+                    <div class="team_item">
+                        <img src="img/Team/5.png" alt="">
+                        <div class="team_item_title">Tomas Wilson</div>
+                        <div class="team_item_text">Designer</div>
+                    </div>
+                    <div class="team_item">
+                        <img src="img/Team/6.png" alt="">
+                        <div class="team_item_title">Teddy Williams</div>
+                        <div class="team_item_text">Project Manager</div>
+                    </div>
                 </div>
             </div>
         </section>
