--- a/index.html
+++ b/index.html
@@ -547,7 +547,7 @@
             <div class="section_title">Team</div>
 
             <div class="team_wrapper">
-                <div class="slider_wrapper">
+                <div class="slider_wrapper element-animation">
                     <div class="team_item">
                         <img src="img/Team/3.png" alt="">
                         <div class="team_item_title">Jonh Smith</div>
@@ -579,6 +579,91 @@
                         <div class="team_item_text">Project Manager</div>
                     </div>
                 </div>
+            </div>
+
+            <div class="partners mobile_opened" id="partners">
+                <div class="section_title element-animation">Partners & Investors</div>
+                <div class="partners_icons element-animation">
+                    <div class="partners_icons_item partners_icons_item1">
+                        <img width="100%" src="img/Partners/1.svg" alt="">
+                    </div>
+                    <div class="partners_icons_item partners_icons_item2">
+                        <img width="100%" src="img/Partners/2.png" alt="">
+                    </div>
+                    <div class="partners_icons_item partners_icons_item3">
+                        <img width="100%" src="img/Partners/3.png" alt="">
+                    </div>
+                    <div class="partners_icons_item partners_icons_item4">
+                        <img width="100%" src="img/Partners/4.png" alt="">
+                    </div>
+                    <div class="partners_icons_item partners_icons_item5">
+                        <img width="100%" src="img/Partners/5.png" alt="">
+                    </div>
+                    <div class="partners_icons_item partners_icons_item6">
+                        <img width="100%" src="img/Partners/6.png" alt="">
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <section class="tokenomiks mobile_opened" id="tokenomics">
+            <div class="section_title">Tokenomics</div>
+
+            <div class="tokenomiks_wrapper">
+                <div class="tokenomiks_col tokenomiks_col1">
+                    <div class="tokenomiks_col_item">
+                        <div class="tokenomiks_col_item_line">
+                            <img src="img/Tokenomics/1.png" alt="">
+                        </div>
+                        <div class="tokenomiks_col_item_title">19% on marketing</div>
+                        <div class="tokenomiks_col_item_text">Thanks to our ecosystem you will be able to earn passively
+                            and actively</div>
+                    </div>
+                    <div class="tokenomiks_col_item">
+                        <div class="tokenomiks_col_item_line">
+                            <img src="img/Tokenomics/2.png" alt="">
+                        </div>
+                        <div class="tokenomiks_col_item_title">5% for founders, 6% stacked</div>
+                        <div class="tokenomiks_col_item_text">Thanks to our ecosystem you will be able to earn passively
+                            and actively</div>
+                    </div>
+                    <div class="tokenomiks_col_item">
+                        <div class="tokenomiks_col_item_line">
+                            <img src="img/Tokenomics/3.png" alt="">
+                        </div>
+                        <div class="tokenomiks_col_item_title">30% for liquidity</div>
+                        <div class="tokenomiks_col_item_text">Thanks to our ecosystem you will be able to earn passively
+                            and actively</div>
+                    </div>
+                </div>
+                <img class="tokenomiks_col tokenomiks_col2" src="img/Tokenomics/bg.png" alt="">
+                <div class="tokenomiks_col tokenomiks_col3">
+                    <div class="tokenomiks_col_item">
+                        <div class="tokenomiks_col_item_line">
+                            <img src="img/Tokenomics/4.png" alt="">
+                        </div>
+                        <div class="tokenomiks_col_item_title">10% for advisors</div>
+                        <div class="tokenomiks_col_item_text">Thanks to our ecosystem you will be able to earn passively
+                            and actively</div>
+                    </div>
+                    <div class="tokenomiks_col_item">
+                        <div class="tokenomiks_col_item_line">
+                            <img src="img/Tokenomics/5.png" alt="">
+                        </div>
+                        <div class="tokenomiks_col_item_title">P2e 15%</div>
+                        <div class="tokenomiks_col_item_text">Thanks to our ecosystem you will be able to earn passively
+                            and actively</div>
+                    </div>
+                    <div class="tokenomiks_col_item">
+                        <div class="tokenomiks_col_item_line">
+                            <img src="img/Tokenomics/6.png" alt="">
+                        </div>
+                        <div class="tokenomiks_col_item_title">NFT 15%</div>
+                        <div class="tokenomiks_col_item_text">Thanks to our ecosystem you will be able to earn passively
+                            and actively</div>
+                    </div>
+                </div>
+            
             </div>
         </section>
     </div>
