--- a/index.html
+++ b/index.html
@@ -663,7 +663,64 @@
                             and actively</div>
                     </div>
                 </div>
-            
+
+            </div>
+
+            <div class="tokenomiks_wrapper_mobile">
+                <img class="tokenomiks_col tokenomiks_col2" src="img/Tokenomics/bg.png" alt="">
+                <div class="mobile_tokenomiks_items">
+                    <div class="tokenomiks_col_item">
+                        <div class="tokenomiks_col_item_line">
+                            <img src="img/Tokenomics/1.png" alt="">
+                        </div>
+                        <div class="tokenomiks_col_item_title">19% on marketing</div>
+                        <div class="tokenomiks_col_item_text">Thanks to our ecosystem you will be able to earn passively
+                            and actively</div>
+                    </div>
+                    <div class="tokenomiks_col_item">
+                        <div class="tokenomiks_col_item_line">
+                            <img src="img/Tokenomics/2.png" alt="">
+                        </div>
+                        <div class="tokenomiks_col_item_title">5% for founders, 6% stacked</div>
+                        <div class="tokenomiks_col_item_text">Thanks to our ecosystem you will be able to earn passively
+                            and actively</div>
+                    </div>
+                    <div class="tokenomiks_col_item">
+                        <div class="tokenomiks_col_item_line">
+                            <img src="img/Tokenomics/3.png" alt="">
+                        </div>
+                        <div class="tokenomiks_col_item_title">30% for liquidity</div>
+                        <div class="tokenomiks_col_item_text">Thanks to our ecosystem you will be able to earn passively
+                            and actively</div>
+                    </div>
+                    <div class="tokenomiks_col_item">
+                        <div class="tokenomiks_col_item_line">
+                            <img src="img/Tokenomics/4.png" alt="">
+                        </div>
+                        <div class="tokenomiks_col_item_title">10% for advisors</div>
+                        <div class="tokenomiks_col_item_text">Thanks to our ecosystem you will be able to earn passively
+                            and actively</div>
+                    </div>
+                    <div class="tokenomiks_col_item">
+                        <div class="tokenomiks_col_item_line">
+                            <img src="img/Tokenomics/5.png" alt="">
+                        </div>
+                        <div class="tokenomiks_col_item_title">P2e 15%</div>
+                        <div class="tokenomiks_col_item_text">Thanks to our ecosystem you will be able to earn passively
+                            and actively</div>
+                    </div>
+                    <div class="tokenomiks_col_item">
+                        <div class="tokenomiks_col_item_line">
+                            <img src="img/Tokenomics/6.png" alt="">
+                        </div>
+                        <div class="tokenomiks_col_item_title">NFT 15%</div>
+                        <div class="tokenomiks_col_item_text">Thanks to our ecosystem you will be able to earn passively
+                            and actively</div>
+                    </div>
+                </div>
+                <div class="mobile_tokenomiks_graphic">
+                    <img width="100%" src="img/Road_line/mobile_graphic.png" alt="">
+                </div>
             </div>
         </section>
     </div>
