--- a/index.html
+++ b/index.html
@@ -723,6 +723,70 @@
                 </div>
             </div>
         </section>
+
+        <section class="accordion">
+            <div class="section_title">Frequently Asked Questions</div>
+
+            <div class="accordion_wrapper">
+
+                <ul class="accordion-list">
+                    <li>
+                        <h3>Where can I buy tokens and NFTs of SpiderShib Inu?<span><img src="img/Accordion/arrow.png"
+                                    alt=""></span></h3>
+                        <div class="answer">
+                            <p>While we would love to be able to give a definitive, fixed price for a website, it really
+                                depends on the specific needs for each individual business. If one business needs a
+                                website comprised of five pages, while another has a substantially larger site of over
+                                100 pages - obviously those projects are going to command different price points.</p>
+
+                        </div>
+                    </li>
+
+                    <li>
+                        <h3>Where can I buy tokens and NFTs of SpiderShib Inu?<span><img src="img/Accordion/arrow.png"
+                                    alt=""></span></h3>
+
+                        <div class="answer">
+                            <p>This will vary depending on the type of project. For logo & branding projects, fees will
+                                be one-time costs. For website projects, we will typically charge a monthly fee,
+                                depending on the level of service you choose. To view a full list of our monthly
+                                packages, click here.</p>
+                        </div>
+                    </li>
+
+                    <li>
+                        <h3>Where can I buy tokens and NFTs of SpiderShib Inu?<span><img src="img/Accordion/arrow.png"
+                                    alt=""></span></h3>
+
+                        <div class="answer">
+                            <p>Logo projects typically cost between $3,000 - $5000.</p>
+                            <p>"Why so much?" many people ask. To answer simply - because they require a lot of work. At
+                                least, to do them properly. And of all of the investments that you will make for your
+                                business, your logo & branding is one area where you don't want to skimp.</p>
+                            <p>In business, image is everything. And while your overall brand is based on far more than
+                                just your logo, a bad logo can create a strong first impression (for better or for
+                                worse).</p>
+
+                        </div>
+                    </li>
+
+                    <li>
+                        <h3>Where can I buy tokens and NFTs of SpiderShib Inu?<span><img src="img/Accordion/arrow.png"
+                                    alt=""></span></h3>
+
+                        <div class="answer">
+                            <p>Experience, quality, and results.</p>
+                            <p><strong>Experience.</strong> We have been designing websites professional since the early
+                                days of the web - before CSS was mainstream, and people still used tables for their
+                                website layouts. In the 20+ years that we have been doing this, we have work with and
+                                learned from many of the top voices in several industries. To put it simply - there are
+                                very few people in the world, let alone the area that can top our years of experience.
+                            </p>
+                        </div>
+                    </li>
+                </ul>
+            </div>
+        </section>
     </div>
 
 
