--- a/index.html
+++ b/index.html
@@ -724,7 +724,7 @@
             </div>
         </section>
 
-        <section class="accordion">
+        <section class="accordion" id="why_invest">
             <div class="section_title">Frequently Asked Questions</div>
 
             <div class="accordion_wrapper">
